# falcon

./: .gitignore  LICENSE  README.md
fortune/: fortune_cookie.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: AgentOutput.svelte  AgentPanel.svelte  BlockContextMenu.svelte  CommandPalette.svelte  GrokSidebar.svelte  OrchestratorPanel.svelte  Terminal.svelte
src-tauri/: Cargo.toml  random_probability_demo.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  block.rs  context.rs  grok.rs  image.rs  lib.rs  main.rs  memory.rs  multi_agent.rs  pty.rs  rules.rs  safety.rs  tools.rs
